cap at 100; add note and have output message

--- a/offensive_tweets.ipynb
+++ b/offensive_tweets.ipynb
@@ -13,7 +13,7 @@
     "from os import getcwd\n",
     "import numpy as np \n",
     "MAX_NB_WORDS=40000 #defines the size of our vocabulary\n",
-    "MAX_SEQUENCE_LENGTH=50\n",
+    "MAX_SEQUENCE_LENGTH=100\n",
     "VALIDATION_SPLIT=0.2 #what percent of training examples to be saved for testing\n",
     "EMBEDDING_DIM=50"
    ]
@@ -64,7 +64,7 @@
     "\n",
     "We use `fit_on_text` to make a dictionary from the training texts, while the `texts_to_sequences` transforms each work in the text and replaces it with the corresponding integer value.\n",
     "\n",
-    "We also pad our sequences to make every text sequence the same length. We cap these at 50, which is pretty high given the length of a tweet.\n",
+    "We also pad our sequences to make every text sequence the same length. We cap these at 100, which is pretty high given the length of a tweet, but the neural net architecture I \"borrowed\" below was build for something much larger, so we're doing some padding.\n",
     "\n",
     "Even though we're looking for a 0 or 1 value for a label, we still use `to_categorial` to give the cathe categories of \"offensive\" and \"not offensive\" with 0 or 1 values for each.\n",
     "\n",
@@ -73,18 +73,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -96,7 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 28821 unique tokens.\nShape of data tensor: (14509, 50)\nShape of label tensor: (14509, 2)\n"
+      "Found 28821 unique tokens.\nShape of data tensor: (14509, 100)\nShape of label tensor: (14509, 2, 2)\n"
      ]
     }
    ],
@@ -2321,7 +2314,8 @@
     "sequences = tokenizer.texts_to_sequences(['I love talking to you about machine learning'])\n",
     "padded_input = pad_sequences(sequences, maxlen=MAX_SEQUENCE_LENGTH)\n",
     "\n",
-    "model.predict(padded_input)"
+    "predictions = model.predict(padded_input)\n",
+    "print(\"Message is\", predictions[0][1], \"offensive\")"
    ]
   },
   {
