--- a/offensive_tweets.ipynb
+++ b/offensive_tweets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -86,15 +86,18 @@
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'MAX_NB_WORDS' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-52698c9c7d65>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mK\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_image_dim_ordering\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'tf'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mtokenizer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTokenizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnb_words\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mMAX_NB_WORDS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit_on_texts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtexts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0msequences\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtokenizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtexts_to_sequences\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtexts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'MAX_NB_WORDS' is not defined"
-     ],
-     "output_type": "error"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/imack/.pyenv/versions/3.5.4/lib/python3.5/site-packages/keras_preprocessing/text.py:177: UserWarning: The `nb_words` argument in `Tokenizer` has been renamed `num_words`.\n  warnings.warn('The `nb_words` argument in `Tokenizer` '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 28821 unique tokens.\nShape of data tensor: (14509, 50)\nShape of label tensor: (14509,)\n"
+     ]
     }
    ],
    "source": [
@@ -130,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -169,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,24 +195,29 @@
    "source": [
     "## Fits Like a GloVe\n",
     "\n",
-    "Now that we have our vectors, we need to load our pre-trained GloVe word vectors for turning our words into high-demensional vectors for understanding english words. We load the 50-dimensional dataset into a dictionary called `embeddings_index`. Which maps words to arrays of 50 integers. (this takes a minute to load the data)\n",
+    "Now that we have our vectors, we need to load our pre-trained GloVe word vectors for turning our words into high-demensional vectors for understanding english words. We load the 200-dimensional dataset into a dictionary called `embeddings_index`. Which maps words to arrays of 200 numbers. (this takes a minute to load the data)\n",
     "\n",
     "[GloVe: Global Vectors for Word Representation](https://nlp.stanford.edu/projects/glove/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 1193514 word vectors.\n[ 2.1209e-01 -1.2778e-01  4.0272e-01  2.2283e-01 -1.2324e-01  2.0982e-01\n  7.9629e-01  5.0014e-01 -7.1023e-01 -3.2143e-01  2.3734e-02 -4.1122e-01\n -3.0436e-01 -2.5120e-01  3.1544e-02 -5.8415e-01 -3.0506e-01 -1.1919e-02\n -8.8954e-01 -1.2058e-01  2.3754e-01  1.9054e-01 -9.7923e-02  2.5295e-01\n  3.0038e-01  9.5225e-01 -1.1805e-01 -1.7776e-01 -1.6796e-01 -4.2559e-01\n -1.6858e-01 -6.2006e-01  4.5306e-01 -1.5678e-01 -1.2554e-01  1.2103e-01\n  1.9681e-01  1.0356e+00  7.3817e-01 -2.3944e-01 -2.3197e-01  3.3474e-01\n -3.1956e-01 -6.0540e-01  3.9843e-01  2.0453e-01 -2.6106e-01  4.0713e-01\n -1.5686e-01  1.4560e-01  2.5623e-01 -6.0652e-03  5.2414e-02 -4.2158e-01\n -7.4491e-01  8.0630e-02 -7.0024e-01 -6.4837e-01 -3.6998e-01  4.8424e-01\n  4.0435e-01  3.5487e-02  8.5513e-02  1.8949e-01 -3.9531e-01  2.9498e-01\n  1.1069e-01 -1.4824e-01  6.9241e-02 -3.9568e-01 -5.1378e-01  2.1923e-01\n  4.5318e-01  5.9044e-01 -5.5246e-01  2.1597e-01  6.9327e-02 -2.1616e-01\n  6.3333e-01  4.1607e-01  9.8590e-02  3.1431e-02 -2.4052e-01 -7.6273e-03\n  4.4835e-02 -4.0373e-01  3.2494e-01 -3.8170e-01  6.2241e-01 -2.9477e-01\n  5.0233e-02  5.4800e-02  2.9299e-02  3.5304e-01 -3.0953e-01 -5.8682e-01\n -3.9121e-01  3.5111e-01  8.8406e-01  1.0608e-01  4.0224e-01 -5.7515e-01\n  5.4398e-01  1.0454e-02 -1.4563e-01 -2.9927e-01  4.0414e-01 -6.7633e-01\n -2.3738e-02 -2.8139e-01  8.3860e-02 -1.1686e-01 -6.4000e-01 -5.0509e-01\n -5.1656e-01 -6.0797e-01  5.3634e-01 -2.4887e-01 -4.5375e-04 -2.2013e-01\n -9.9234e-02  4.6556e-02 -1.1107e+00  6.3847e-02 -8.7227e-01  4.6240e-02\n  5.7063e-02 -1.6838e-01  3.6716e-01  4.1124e-01 -5.2100e-02 -4.6246e-01\n  6.0868e-01  5.2596e-01 -3.5542e-01 -3.9351e-01 -7.7792e-01 -9.9908e-02\n  5.5029e-01  3.9477e-01  5.7900e-01  9.7632e-02  2.9648e-01  5.0578e-01\n -3.5871e-01  3.1565e-01 -2.9665e-01 -2.7615e-01 -4.2157e-01 -3.6729e-01\n  2.5539e-01  8.2215e-02 -5.3748e+00 -1.9641e-01 -1.8841e-01 -3.3129e-01\n -3.2385e-01  7.8098e-01 -6.0083e-01 -1.5413e-01  4.2952e-01 -2.1067e-01\n -6.1751e-02  5.7293e-01  1.6326e-01  5.4750e-01  3.8465e-02  9.8624e-02\n  6.2334e-01  1.9075e-01  4.3724e-02  1.2021e-01 -3.9081e-02 -1.8733e-01\n -1.7967e-01 -2.9500e-01  8.7625e-01 -1.5442e-02 -1.8404e-01  2.2536e-01\n -1.7539e-01  1.9443e-01 -1.4332e-01 -2.6944e-01 -3.5447e-01  7.3741e-01\n  9.3589e-03 -2.6930e-01 -1.6836e-02  6.7600e-01  3.9523e-01  4.5615e-01\n  8.7386e-02 -7.2737e-02 -5.0797e-01 -9.8226e-02  1.9777e-01  2.5636e-01\n -8.3758e-01  7.6929e-01]\n"
-     ]
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-419a0bf05796>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mline\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mword\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mcoefs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'float32'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0membeddings_index\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcoefs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/imack/.pyenv/versions/3.5.4/lib/python3.5/site-packages/numpy/core/numeric.py\u001b[0m in \u001b[0;36masarray\u001b[0;34m(a, dtype, order)\u001b[0m\n\u001b[1;32m    499\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    500\u001b[0m     \"\"\"\n\u001b[0;32m--> 501\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    502\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    503\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ],
+     "output_type": "error"
     }
    ],
    "source": [
